[workspace]
members = [
  "iroh-base",
  "iroh-dns",
  "iroh-dns-server",
  "iroh",
  "iroh/bench",
  "iroh-relay",
]
resolver = "2"

[profile.release]
debug = true

[profile.dev-ci]
inherits = 'dev'
opt-level = 1

[profile.optimized-release]
inherits = 'release'
debug = false
lto = true
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false

[workspace.lints.rust]
missing_debug_implementations = "warn"

# We use this --cfg for documenting the cargo features on which an API
# is available.  To preview this locally use: RUSTDOCFLAGS="--cfg
# iroh_docsrs" cargo +nightly doc --all-features.  We use our own
# iroh_docsrs instead of the common docsrs to avoid also enabling this
# feature in any dependencies, because some indirect dependencies
# require a feature enabled when using `--cfg docsrs` which we can not
# do.  To enable for a crate set `#![cfg_attr(iroh_docsrs,
# feature(doc_cfg))]` in the crate.
# We also have our own `iroh_loom` cfg to enable tokio-rs/loom testing.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(iroh_docsrs)", "cfg(iroh_loom)", "cfg(skip_patchbay)"] }

[workspace.lints.clippy]
unused-async = "warn"

[workspace.metadata.cargo-semver-checks.lints]
enum_struct_variant_field_marked_deprecated = { required-update = "minor" }
enum_tuple_variant_field_marked_deprecated = { required-update = "minor" }
enum_variant_marked_deprecated = { required-update = "minor" }
function_marked_deprecated = { required-update = "minor" }
global_value_marked_deprecated = { required-update = "minor" }
macro_marked_deprecated = { required-update = "minor" }
proc_macro_marked_deprecated = { required-update = "minor" }
struct_field_marked_deprecated = { required-update = "minor" }
trait_associated_const_marked_deprecated = { required-update = "minor" }
trait_associated_type_marked_deprecated = { required-update = "minor" }
trait_marked_deprecated = { required-update = "minor" }
trait_method_marked_deprecated = { required-update = "minor" }
type_associated_const_marked_deprecated = { required-update = "minor" }
type_marked_deprecated = { required-update = "minor" }
type_method_marked_deprecated = { required-update = "minor" }

# Temporary: noq with PathEvent::Suspect plus the abandon-time retransmit fix,
# see plans/relay-failover-simplify.md. Both noq changes have their own PRs
# pending upstream (Frando/path-suspect, Frando/abandon-retransmit); this
# branch combines them for testing until they land and iroh can go back to a
# released noq version.
[patch.crates-io]
noq = { git = "https://github.com/n0-computer/noq", branch = "Frando/path-suspect-and-abandon-retransmit" }
noq-proto = { git = "https://github.com/n0-computer/noq", branch = "Frando/path-suspect-and-abandon-retransmit" }
noq-udp = { git = "https://github.com/n0-computer/noq", branch = "Frando/path-suspect-and-abandon-retransmit" }
