[package]
name = "iroh-examples"
version = "0.1.0"
edition = "2021"
authors = ["Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Examples"

[dependencies]
anyhow = "1"
bytes = "1.1.0"
bytesize = "1.1.0"
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3.21"
indicatif = "0.17.0"
iroh-car = { path = "../iroh-car" }
iroh-resolver = { path = "../iroh-resolver" }
iroh-rpc-client = { path = "../iroh-rpc-client" }
iroh-util = { path = "../iroh-util" }
par-stream = { version = "0.10.2", default-features = false, features = ["runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []


[[bin]]
name = "importer"
