[package]
name = "iroh-examples"
version = "0.1.3"
edition = "2021"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Examples"
rust-version = "1.65"
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1.1.0"
bytesize = "1.1.0"
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3.21"
indicatif = "0.17.0"
iroh-car = { version = "0.1.3", path = "../iroh-car" }
iroh-unixfs = { version = "0.1.3", path = "../iroh-unixfs" }
iroh-rpc-client = { version = "0.1.3", path = "../iroh-rpc-client" }
iroh-util = { version = "0.1.3", path = "../iroh-util" }
par-stream = { version = "0.10.2", default-features = false, features = ["runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "importer"
