[package]
name = "iroh-api"
readme = "README.md"
description = "Rust API for Iroh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
testing = ["dep:mockall"]

[dependencies]
anyhow.workspace = true
async-stream = "0.3.3"
bytes = "1.1.0"
cid = "0.9"
config = "0.13.1"
futures = "0.3.21"
iroh-metrics.workspace = true
iroh-resolver.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-unixfs.workspace = true
iroh-util.workspace = true
libp2p = "0.50"
mockall = { version = "0.11.2", optional = true }
relative-path = "1.7.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1" }
tracing = "0.1.34"

[dev-dependencies]
tempfile = "3.3.0"
