[package]
name = "iroh-api"
readme = "README.md"
description = "Rust API for Iroh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
testing = ["dep:mockall"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
cid.workspace = true
config.workspace = true
futures.workspace = true
iroh-metrics.workspace = true
iroh-resolver.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-unixfs.workspace = true
iroh-util.workspace = true
libp2p.workspace = true
mockall = { workspace = true, optional = true }
relative-path.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
iroh-rpc-types.workspace = true
iroh-store.workspace = true
tempfile.workspace = true

[[bench]]
name = "add"
harness = false
