[package]
name = "iroh-bitswap"
version = "0.1.0"
edition = "2021"
authors = ["David Craven <david@craven.ch>", "Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Implementation of the bitswap protocol"

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
tokio = { version = "1", features = ["sync"] }
bytes = "1.1.0"
cid = "0.8.0"
futures = "0.3.21"
libp2p = { version = "0.50", default-features = false, features = ["ping"] }
multihash = "0.16.0"
prost = "0.11"
thiserror = "1.0.20"
unsigned-varint = { version = "0.7.0", features = ["asynchronous_codec"] }
ahash = "0.8.0"
tracing = "0.1.34"
num_enum = "0.5.7"
iroh-metrics = { path = "../iroh-metrics", default-features = false, features = ["bitswap"] }
names = { version = "0.14.0", default-features = false }
git-version = "0.3.5"
caches = "0.2.2"
asynchronous-codec = "0.6.0"
smallvec = "1.9.0"
iroh-util = { path = "../iroh-util" }
wasm-timer = "0.2.5"
anyhow = "1.0.65"
once_cell = "1.14.0"
crossbeam = "0.8.2"
keyed_priority_queue = "0.4.1"
async-trait = "0.1.57"
rand = "0.8.5"
derivative = "2.2.0"
async-channel = "1.7.1"
awaitgroup = "0.6.0"
async-broadcast = "0.4.1"
tokio-stream = "0.1.11"
tokio-context = "0.1.3"
deadqueue = "0.2.3"

[dev-dependencies]
criterion = "0.4.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
libp2p = { version = "0.50", features = ["yamux", "noise", "tcp", "tokio"], default-features = false }
tokio = { version = "1", features = ["macros", "net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }


[[bench]]
name = "message"
harness = false

[features]
default = []
