[package]
name = "iroh-bitswap"
version = "0.1.0"
edition = "2021"
authors = ["David Craven <david@craven.ch>", "Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Implementation of the bitswap protocol"

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
ahash = "0.8.0"
anyhow = "1"
async-broadcast = "0.4.1"
async-channel = "1.7.1"
async-trait = "0.1.57"
asynchronous-codec = "0.6.0"
bytes = "1.1.0"
cid = "0.8.0"
deadqueue = "0.2.3"
derivative = "2.2.0"
futures = "0.3.21"
iroh-metrics = { path = "../iroh-metrics", default-features = false, features = ["bitswap"] }
iroh-util = { path = "../iroh-util" }
keyed_priority_queue = "0.4.1"
libp2p = { version = "0.50", default-features = false, features = ["ping"] }
multihash = "0.16.0"
names = { version = "0.14.0", default-features = false }
num_enum = "0.5.7"
once_cell = "1.14.0"
prost = "0.11"
rand = "0.8.5"
smallvec = "1.9.0"
thiserror = "1.0.20"
tokio = { version = "1", features = ["sync"] }
tokio-context = "0.1.3"
tokio-stream = "0.1.11"
tracing = "0.1.34"
unsigned-varint = { version = "0.7.0", features = ["asynchronous_codec"] }
wasm-timer = "0.2.5"

[dev-dependencies]
criterion = "0.4.0"
libp2p = { version = "0.50", features = ["yamux", "noise", "tcp", "tokio"], default-features = false }
tokio = { version = "1", features = ["macros", "net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }


[[bench]]
name = "message"
harness = false

[features]
default = []
