[package]
name = "iroh-bytes"
version = "0.6.0"
edition = "2021"
readme = "README.md"
description = "blob and collection transfer support for iroh"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.70"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bao-tree = { version = "0.9.0", features = ["tokio_fsm"], default-features = false }
bytes = { version = "1.4", features = ["serde"] }
chrono = "0.4.31"
data-encoding = "2.3.3"
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into", "into"] }
flume = "0.10.14"
futures = "0.3.25"
genawaiter = { version = "0.99.1", features = ["futures03"] }
hex = "0.4.3"
iroh-io = { version = "0.3.0" }
multibase = "0.9.1"
num_cpus = "1.15.0"
once_cell = "1.17.0"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
quinn = "0.10"
rand = "0.8"
range-collections = "0.4.0"
self_cell = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde-error = "0.1.2"
smallvec = { version = "1.10.0", features = ["serde", "const_new"] }
subtle = "2.4"
thiserror = "1"
tokio = { version = "1", features = [] }
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }
tracing = "0.1"
tracing-futures = "0.2.5"

[dev-dependencies]
http-body = "0.4.5"
iroh-test = { path = "../iroh-test" }
proptest = "1.0.0"
serde_test = "1.0.176"
tokio = { version = "1", features = ["macros", "test-util"] }

[features]
default = []
