[package]
name = "iroh-cli"
version = "0.12.0"
edition = "2021"
readme = "README.md"
description = "Bytes. Distributed."
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["networking", "p2p", "holepunching", "ipfs"]

[lints]
workspace = true

[[bin]]
name = "iroh"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.81"
bao-tree = { version = "0.11.1" }
bytes = "1.5.0"
clap = { version = "4", features = ["derive"] }
colored = { version = "2.0.4" }
comfy-table = { version = "7.0.1" }
config = { version = "0.13.1", default-features = false, features = ["toml", "preserve_order"] }
console = { version = "0.15.5" }
derive_more = { version = "1.0.0-beta.1", features = ["display"] }
dialoguer = { version = "0.11.0", default-features = false }
dirs-next = { version = "2.0.0" }
futures-buffered = "0.2.4"
futures-lite = "2.3"
hex = "0.4.3"
human-time = { version = "0.1.6" }
indicatif = { version = "0.17", features = ["tokio"] }
iroh = { version = "0.12.0", path = "../iroh", features = ["metrics"] }
iroh-metrics = { version = "0.12.0", path = "../iroh-metrics" }
multibase = { version = "0.9.1" }
num_cpus = "1.16.0"
parking_lot = "0.12.1"
postcard = "1.0.8"
portable-atomic = "1"
quic-rpc = { version = "0.7.0", features = ["flume-transport", "quinn-transport"] }
quinn = "0.10.2"
rand = "0.8.5"
rustyline = { version = "12.0.0" }
shell-words = { version = "1.1.0" }
shellexpand = { version = "3.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
time = { version = "0.3", features = ["formatting"] }
toml = { version = "0.8" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io-util", "io", "time"] }
tempfile = "3.10.1"
url = { version = "2.4", features = ["serde"] }
flume = "0.11.0"

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.27", features = ["signal", "process"] }
regex = "1.10.3"
testdir = "0.9.1"
walkdir = "2"
