[package]
name = "iroh-cli"
version = "0.13.0"
edition = "2021"
readme = "README.md"
description = "Bytes. Distributed."
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["networking", "p2p", "holepunching", "ipfs"]

# Despite not being in the workspace root this is explicitly here to
# make `cargo run` in the workspace root invoke `iroh`.
default-run = "iroh"

[lints]
workspace = true

[[bin]]
name = "iroh"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.81"
bao-tree = "0.13"
bytes = "1.5.0"
clap = { version = "4", features = ["derive"] }
colored = "2.0.4"
comfy-table = "7.0.1"
console = "0.15.5"
derive_more = { version = "1.0.0-beta.1", features = ["display"] }
dialoguer = { version = "0.11.0", default-features = false }
dirs-next = "2.0.0"
flume = "0.11.0"
futures = "0.3.30"
hex = "0.4.3"
human-time = "0.1.6"
indicatif = { version = "0.17", features = ["tokio"] }
iroh = { version = "0.13.0", path = "../iroh", features = ["metrics"] }
iroh-metrics = { version = "0.13.0", path = "../iroh-metrics" }
parking_lot = "0.12.1"
postcard = "1.0.8"
portable-atomic = "1"
quic-rpc = { version = "0.7.0", features = ["flume-transport", "quinn-transport"] }
quinn = "0.10.2"
rand = "0.8.5"
rustyline = "12.0.0"
shell-words = "1.1.0"
shellexpand = "3.1.0"
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
tempfile = "3.10.1"
toml = { version = "0.8.12", features = ["preserve_order"] }

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.27", features = ["signal", "process"] }
regex = "1.10.3"
testdir = "0.9.1"
walkdir = "2"

[features]
default = ["metrics"]
metrics = []
