[package]
name = "iroh-content"
version = "0.1.3"
edition = "2021"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Implementation of unixfs for iroh"
rust-version = "1.63"

[dependencies]
anyhow = "1"
async-trait = "0.1.53"
bytes = "1.1.0"
cid = "0.9"
futures = "0.3.21"
iroh-rpc-client = { version = "0.1.3", path = "../iroh-rpc-client" }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
tracing = "0.1.34"
serde = { version = "1", features = ["derive"] }
multihash = "0.16.3"
libp2p = { version = "0.50", default-features = false, features = ["serde"] }
libipld = "0.15.0"
iroh-util = { version = "0.1.3", path = "../iroh-util", default-features = false }
tokio = { version = "1", features = ["fs"] }
async-channel = "1.7.1"
base64 = "0.13.1"
unsigned-varint = "0.7.1"
num_enum = "0.5.7"

[dev-dependencies]
serde_json = "1.0.87"
