[package]
name = "iroh-ctl"
version = "0.1.0"
edition = "2021"
authors = ["Kasey Huizinga <klhuizinga@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Client for interacting with running iroh processes."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3.5"
tokio = { version = "1.0", features = ["fs", "io-util"] }
tracing = "0.1.34"
clap = { version = "3.1.14", features = ["derive"] }
crossterm = "0.23.2"
tonic = "0.7.2"
iroh-rpc-client = { path = "../iroh-rpc-client", default-features = false, features = ["grpc", "mem"] }
config = "0.13.1"
iroh-util = { path = "../iroh-util" }
serde = { version = "1.0", features = ["derive"] }
git-version = "0.3.5"
prometheus-client = "0.17.0"
iroh-metrics = { path = "../iroh-metrics", default-features = false, features = ["rpc-grpc"] }
libp2p = { version = "0.47", default-features = false }
cid = "0.8.5"
multiaddr = "0.14.0"
bytes = "1.1.0"
iroh-resolver = { path = "../iroh-resolver" }
