[package]
name = "iroh-ctl"
version = "0.1.0"
edition = "2021"
authors = ["Kasey Huizinga <klhuizinga@gmail.com>", "Martijn Faassen <faassen@startifact.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Client for interacting with running iroh processes."
default-run = "iroh-ctl"

[features]
fake = []

[[bin]]
bench = false
path = "src/main.rs"
name = "iroh-ctl"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3.21"
tokio = { version = "1", features = ["fs", "io-util"] }
tracing = "0.1.34"
clap = { version = "4.0.9", features = ["derive"] }
crossterm = "0.25"
tonic = "0.8"
iroh-rpc-client = { path = "../iroh-rpc-client", default-features = false, features = ["grpc", "mem"] }
iroh-resolver = { path = "../iroh-resolver" }
config = "0.13.1"
iroh-util = { path = "../iroh-util" }
serde = { version = "1.0", features = ["derive"] }
git-version = "0.3.5"
iroh-metrics = { path = "../iroh-metrics", default-features = false, features = ["rpc-grpc"] }
iroh = { path = "../iroh"}
libp2p = { version = "0.49", default-features = false }
cid = "0.8.5"
multiaddr = "0.14.0"
bytes = "1.1.0"
async-stream = "0.3.3"

[dev-dependencies]
trycmd = "0.13.7"
# this is a workaround based on for enabling features only during test: 
# https://github.com/DesmondWillowbrook/cargo-optional-features-for-testing-and-examples
iroh-ctl = { path = ".", features = ["fake"] }
