[package]
name = "iroh-ctl"
version = "0.1.0"
edition = "2021"
authors = ["Kasey Huizinga <klhuizinga@gmail.com>", "Martijn Faassen <faassen@startifact.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Client for interacting with running iroh processes."
default-run = "iroh"

[features]
testing = []

[[bin]]
path = "src/main.rs"
name = "iroh"

[dependencies]
anyhow = "1.0"
futures = "0.3.21"
tokio = { version = "1", features = ["fs", "io-util"] }
tracing = "0.1.34"
clap = { version = "4.0.9", features = ["derive"] }
crossterm = "0.25"
tonic = "0.8"
git-version = "0.3.5"
iroh-metrics = { path = "../iroh-metrics", default-features = false, features = ["rpc-grpc"] }
iroh = { path = "../iroh"}

[dev-dependencies]
trycmd = "0.13.7"
iroh = { path = "../iroh", features = ["testing"] }
# We want to compile `iroh-ctl` in test mode, but we can't specify that yet:
# https://github.com/rust-lang/cargo/issues/1982
# This is a workaround for enabling features only during testing: 
# https://github.com/DesmondWillowbrook/cargo-optional-features-for-testing-and-examples
# It is needed to have trycmd invoke a version of the iroh CLI in testing
# mode. trycmd needs to have an actual binary to invoke.
# Unfortunately this also turns on the feature during development, which may be
# confusing. See the comments in `run.rs` surrounding this.
iroh-ctl = { path = ".", features = ["testing"] }
